# personal-finance-backend

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 532264bd25b9_create_users_table.py
api/config/: index.html
api/models/: index.html
api/schemas/: index.html
api/security/: index.html
api/services/: index.html
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/models/: user.py
app/schemas/: auth.py
app/services/: user_service.py
docs/: index.md
docs/api/: config.md  deps.md  models.md  schemas.md  security.md  services.md
docs/guides/: authentication.md  getting-started.md
guides/authentication/: index.html
guides/getting-started/: index.html
search/: search_index.json
